--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img class="img-fluid" src="img/logo-siarsa.png">
             <!-- <p data-aos="fade-up">Expertos en HVAC & R.</p> -->
             <br>
-            <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Mas Información</a>
+            <a data-aos="fade-up" data-aos-delay="200" href="mantenimientos.html" class="btn-get-started">Servicios</a>
           </div>
         </div>
       </div>
@@ -276,7 +276,7 @@
               <div class="icon">
                 <i class="bi-currency-dollar"></i>
               </div>
-              <h3>Venta e Instalación</h3>
+              <h3> <a href="mantenimientos.html">Venta e Instalación</a></h3>
               <ul>
               <li><p class="texto-justificado">Venta de unidades de aire acondicionado y sistemas de refrigeración para hogares, oficinas, comercios e industrias.</p></li>
               <li><p class="texto-justificado">Instalación profesional de aires acondicionados centrales, split, ventana y sistemas de refrigeración comercial e industrial</p></li>
@@ -291,7 +291,7 @@
               <div class="icon">
                 <i class="fa-solid bi-gear"></i>
               </div>
-              <h3>Mantenimiento Preventivo</h3>
+              <h3><a href="mantenimientos.html">Mantenimiento Preventivo</a></h3>
              <ul>
               <li><p class="texto-justificado">Programas de mantenimiento regular para asegurar el funcionamiento eficiente de los sistemas.</p></li>
              <li><p class="texto-justificado">Limpieza y remplazo de filtros de aire.</p></li> 
@@ -307,7 +307,7 @@
               <div class="icon">
                 <i class="fa-solid bi-hammer"></i>
               </div>
-              <h3>Reparación y Servicio Técnico</h3>
+              <h3><a href="mantenimientos.html">Reparación y Servicio Técnico</a></h3>
               <ul>
               <li><p class="texto-justificado">Diagnóstico y reparación de problemas en sistemas de aire acondicionado y refrigeración.</p></li>
               <li><p class="texto-justificado">Reparación o reemplazo de compresores, ventiladores y otros componentes.</p></li>
@@ -323,7 +323,7 @@
               <div class="icon">
                 <i class="fa-solid bi-lightning-charge-fill"></i>
               </div>
-              <h3>Optimización de Eficiencia Energética</h3>
+              <h3><a href="mantenimientos.html">Optimización de Eficiencia Energética</h3></a>
               <ul>
              <li><p class="texto-justificado">Evaluación de la eficiencia energética de los sistemas existentes.</p></li>
              <li><p class="texto-justificado">Recomendaciones para la mejor eficiencia y reducir los costos de energía.</p></li>
@@ -339,7 +339,7 @@
               <div class="icon">
                 <i class="fa-solid bi-stickies-fill"></i>
               </div>
-              <h3>Diseño y Consultoría</h3>
+              <h3><a href="mantenimientos.html">Diseño y Consultoría</h3></a>
               <ul>
               <li><p class="texto-justificado">Diseño de sistemas de aire acondicionado y refrigeración personalizados para espacios específicos.</p></li>
               <li><p class="texto-justificado">Consultoría en la selección del equipo adecuado para satisfacer las necesidades del cliente y el espacio disponible.</p></li>
@@ -354,7 +354,7 @@
               <div class="icon">
                 <i class="fa-solid bi-fan"></i>
               </div>
-              <h3>Sistemas Especiales</h3>
+              <h3><a href="mantenimientos.html">Sistemas Especiales</h3></a>
               <ul>
               <li><p class="texto-justificado">Instalación y mantenimiento de sistemas de aire acondicionado y refrigeración para aplicaciones especiales, como salas limpias, cámaras frigoríficas, y sistemas de refrigeración industrial.</p></li>
             </ul>
