--- a/about.html
+++ b/about.html
@@ -55,16 +55,16 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="about.html" class="active">Nosotros</a></li>
+          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="about.html">Nosotros</a></li>
           <!-- <li><a href="services.html">Servicios</a></li> -->
           <!-- <li><a href="projects.html">Projects</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="#">Servicios 1</a></li>
-              <li class="dropdown"><a href="#"><span>SubServicios 1</span> <i
+              <li><a href="venta.html">Ventas e Instalación </a></li>
+              <!-- <li class="dropdown"><a href="#"><span>SubServicios 1</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="#">SubServicios 2</a></li>
@@ -73,10 +73,11 @@
                   <li><a href="#">SubServicios 5</a></li>
                   <li><a href="#">SubServicios 6</a></li>
                 </ul>
-              </li>
-              <li><a href="#">Servicios 2</a></li>
-              <li><a href="#">Servicios 3</a></li>
-              <li><a href="#">Servicios 4</a></li>
+              </li> -->
+              <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
+              <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
+              <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
+              <li><a href="sistemasespeciales.html">Sistemas Especiales</a></li>
             </ul>
           </li>
           <li><a href="contact.html">Contacto</a></li>
@@ -199,7 +200,7 @@
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Misión</a></h4>
+                <h4><a class="stretched-link">Misión</a></h4>
                 <p class="texto-justificado">Nuestra misión en SIARSA es proporcionar soluciones de aire acondicionado y sistemas de refrigeración de alta calidad y eficiencia para nuestros clientes. Nos dedicamos a crear ambientes confortables y seguros, tanto en hogares como en empresas, mediante la innovación tecnológica y un servicio excepcional. Estamos comprometidos con la satisfacción del cliente, la sostenibilidad ambiental y el desarrollo continuo de nuestros empleados y socios comerciales.</p>
               </div>
             </div>
@@ -207,7 +208,7 @@
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Visión</a></h4>
+                <h4><a class="stretched-link">Visión</a></h4>
                 <p class="texto-justificado">Nos esforzamos por ser líderes en el mercado de aire acondicionado y sistemas de refrigeración, reconocidos por nuestra excelencia en productos y servicios. Nos visualizamos como una empresa que impulsa la innovación en tecnologías de climatización, contribuyendo así a un mundo más cómodo y sostenible. Aspiramos a establecer relaciones a largo plazo con nuestros clientes, basadas en la confianza mutua y el respeto, y a ser un empleador preferido que fomente el crecimiento profesional y personal de nuestros empleados. Además, nos comprometemos a ser responsables con el medio ambiente, adoptando prácticas empresariales ecoamigables y promoviendo la conciencia ambiental en todas nuestras operaciones y productos.</p>
               </div>
             </div>
