--- a/reparacionyservicios.html
+++ b/reparacionyservicios.html
@@ -46,7 +46,7 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
           <!-- <li><a href="services.html">Servicios</a></li> -->
           <!-- <li><a href="projects.html">Projects</a></li> -->
@@ -54,8 +54,8 @@
           <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="#">Servicios 1</a></li>
-              <li class="dropdown"><a href="#"><span>SubServicios 1</span> <i
+              <li><a href="venta.html">Ventas e Instalación </a></li>
+              <!-- <li class="dropdown"><a href="#"><span>SubServicios 1</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="#">SubServicios 2</a></li>
@@ -64,15 +64,16 @@
                   <li><a href="#">SubServicios 5</a></li>
                   <li><a href="#">SubServicios 6</a></li>
                 </ul>
-              </li>
-              <li><a href="#">Servicios 2</a></li>
-              <li><a href="#">Servicios 3</a></li>
-              <li><a href="#">Servicios 4</a></li>
+              </li> -->
+              <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
+              <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
+              <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
+              <li><a href="sistemasespeciales.html">Sistemas Especiales</a></li>
             </ul>
           </li>
-          <li><a href="contact.html" class="active">Contacto</a></li>
+          <li><a href="contact.html">Contacto</a></li>
         </ul>
-      </nav>
+      </nav><!-- .navbar -->
 
     </div>
   </header>
@@ -82,7 +83,7 @@
     
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-        <h2>Mantenimientos</h2>
+        <h2>Reparación y Servicio Técnico</h2>
       </div>
     </div>
 
