--- a/project-details.html
+++ b/project-details.html
@@ -55,34 +55,34 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i
+          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="about.html">Nosotros</a></li>
+          <!-- <li><a href="services.html">Servicios</a></li> -->
+          <!-- <li><a href="projects.html">Projects</a></li> -->
+          <!-- <li><a href="blog.html">Blog</a></li> -->
+          <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
+              <li><a href="venta.html">Ventas e Instalación </a></li>
+              <!-- <li class="dropdown"><a href="#"><span>SubServicios 1</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
+                  <li><a href="#">SubServicios 2</a></li>
+                  <li><a href="#">SubServicios 3</a></li>
+                  <li><a href="#">SubServicios 4</a></li>
+                  <li><a href="#">SubServicios 5</a></li>
+                  <li><a href="#">SubServicios 6</a></li>
                 </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              </li> -->
+              <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
+              <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
+              <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
+              <li><a href="sistemasespeciales.html">Sistemas Especiales</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contacto</a></li>
         </ul>
       </nav><!-- .navbar -->
-
     </div>
   </header><!-- End Header -->
 
