--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
-          <li><a href="about.html">Nosotros</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="about.html" class="active">Nosotros</a></li>
           <!-- <li><a href="services.html">Servicios</a></li> -->
           <!-- <li><a href="projects.html">Projects</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li> -->
