--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
           <!-- <li><a href="services.html">Servicios</a></li> -->
           <!-- <li><a href="projects.html">Projects</a></li> -->
@@ -80,7 +80,7 @@
               <li><a href="sistemasespeciales.html">Sistemas Especiales</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="contact.html" class="active">Contacto</a></li>
         </ul>
       </nav><!-- .navbar -->
 
