--- a/index.html
+++ b/index.html
@@ -965,6 +965,14 @@
       </div>
 
       </div> -->
+    
+      <h1 class="text-center">Equipos de las Mejores Marcas</h1>
+
+      
+
+
+
+
     </section>
     <!-- End Recent Blog Posts Section -->
 
