--- a/index.html
+++ b/index.html
@@ -966,8 +966,9 @@
 
       </div> -->
     
-      <h1 class="text-center">Equipos de las Mejores Marcas</h1>
+      <h1 class="text-center">Equipos de las mejores arcas</h1>
 
+    <center> <img class="img-fluid" src="img/marcas-aires.png"></center>
       
 
 
