--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>SIARSA</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
+w
   <!-- Favicons -->
   <link href="img/logo-siarsa.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -20,7 +20,7 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
+  
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
@@ -547,7 +547,7 @@
             <li data-filter=".filter-construction">Servicio Técnico</li>
             <li data-filter=".filter-repairs">Optimización Energética</li>
             <li data-filter=".filter-design">Sistemas Especiales</li>
-          </ul><!-- End Projects Filters -->
+          </ul>
 
           <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -556,7 +556,6 @@
                 <img src="img/aire-acondicionado-decoracion-interior.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Aire acondicionado</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/aire-acondicionado-decoracion-interior.jpg" title="Remodeling 1"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
@@ -564,14 +563,13 @@
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
               <div class="portfolio-content h-100">
                 <img src="img/cerrar-bomba-calor-fuera-casa.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sistema de enfriamiento</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/cerrar-bomba-calor-fuera-casa.jpg" title="Construction 1"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
@@ -579,35 +577,33 @@
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
               <div class="portfolio-content h-100">
                 <img src="img/electrico.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Mantenimiento Preventivo y Correctivo</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/electrico.jpg" title="Repairs 1" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-design">
               <div class="portfolio-content h-100">
                 <img src="img/encendidoaire.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Venta de Sistemas Intelifentes de Aire Acondicionado</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/encendidoaire.webp" title="Repairs 1" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
@@ -622,14 +618,13 @@
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
               <div class="portfolio-content h-100">
                 <img src="img/ventilacion.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Ventilacion sobre restaurante</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/ventilacion.jpg " title="Construction 2"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
@@ -637,7 +632,7 @@
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
               <div class="portfolio-content h-100">
@@ -651,28 +646,26 @@
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-design">
               <div class="portfolio-content h-100">
                 <img src="img/personas-tiro-medio-casco-trabajo.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Mantenimiento Corrrectivo y Preventivo</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/personas-tiro-medio-casco-trabajo.jpg" title="Repairs 2" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
                 <img src="img/sistema-refrigeracion-activa-aire.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sistema de Refrigeracion Industrial</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/sistema-refrigeracion-activa-aire.png" title="Remodeling 3"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
@@ -680,7 +673,7 @@
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
               <div class="portfolio-content h-100">
@@ -695,35 +688,33 @@
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
               <div class="portfolio-content h-100">
                 <img src="assets/img/projects/repairs-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Repairs 3</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/projects/repairs-3.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-design">
               <div class="portfolio-content h-100">
                 <img src="assets/img/projects/design-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Design 3</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Projects Item -->
+            </div>
 
           </div><!-- End Projects Container -->
 
