--- a/index.html
+++ b/index.html
@@ -961,10 +961,6 @@
 
     <center> <img class="img-fluid" src="img/marcas-aires.png"></center>
       
-
-
-
-
     </section>
     <!-- End Recent Blog Posts Section -->
 
@@ -972,7 +968,6 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-
     <!-- <div class="footer-content position-relative">
       <div class="container">
         <div class="row">
@@ -988,7 +983,7 @@
               </p>
               <div class="social-links d-flex mt-3">
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
+ s               <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
               </div>
