--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <img class="img-fluid" src="img/logo-siarsa.png">
             <!-- <p data-aos="fade-up">Expertos en HVAC & R.</p> -->
             <br>
-            <a data-aos="fade-up" data-aos-delay="200" href="mantenimientos.html" class="btn-get-started">Servicios</a>
+            <a data-aos="fade-up" data-aos-delay="200" href="contact.html" class="btn-get-started">Contacto</a>
           </div>
         </div>
       </div>
@@ -966,7 +966,7 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
+   
   <footer id="footer" class="footer">
     <!-- <div class="footer-content position-relative">
       <div class="container">
