--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
 
           <div class="col-lg-12">
             <p class="texto-justificado"><h3 class="text-center">¿Dudas y comentarios?</h3></p>
-            <p class="texto-justificado"><h3 class="text-center">Llena el formulario y nos comunicaremos a la brevedad</h3></p>
+            <p class="texto-justificado"><h3 class="text-center">¡Contactanos hoy mismo!</h3></p>
             <div class="container-fluid py-5">
                   <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                   <div class="row justify-content-center">
@@ -173,7 +173,14 @@
                                           <input type="text" class="form-control border-0" name="servicio" id="cage" placeholder="Child Age" required>
                                           <label for="cage">Tipo de Servicio</label>
                                       </div>
-                                  </div>
+                                  </div>                            
+                                  <select class="form-floating" name="marca" id="opcion" name="opcion">
+                                      <option value="opcion1">Mirage</option>
+                                      <option value="opcion2">Trane</option>
+                                      <option value="opcion3">Daikin</option>
+                                      <option value="opcion4">York</option>
+                                  </select>
+                                  <br>
                                   <div class="col-12">
                                       <div class="form-floating">
                                           <textarea class="form-control border-0" name="message" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
