--- a/contact.html
+++ b/contact.html
@@ -174,11 +174,11 @@
                                           <label for="cage">Tipo de Servicio</label>
                                       </div>
                                   </div>                            
-                                  <select class="form-floating" name="marca" id="opcion" name="opcion">
-                                      <option value="opcion1">Mirage</option>
-                                      <option value="opcion2">Trane</option>
-                                      <option value="opcion3">Daikin</option>
-                                      <option value="opcion4">York</option>
+                                  <select class="dropdown" name="marca" id="opcion" name="opcion">
+                                      <option value="Mirage">Mirage</option>
+                                      <option value="Trane">Trane</option>
+                                      <option value="Daikin">Daikin</option>
+                                      <option value="York">York</option>
                                   </select>
                                   <br>
                                   <div class="col-12">
