--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
                                       <option value="Mirage">Mirage</option>
                                       <option value="Trane">Trane</option>
                                       <option value="Daikin">Daikin</option>
-                                      <option value="York">York</option>
+                                      <option value="York4">York</option>
                                   </select>
                                   <br>
                                   <div class="col-12">
