--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -183,7 +183,7 @@
                   Se envían recordatorios periódicos al cliente para programar servicios de mantenimiento, asegurando que el sistema esté siempre en condiciones óptimas.
                 </p>
                 
-                <img src="img/sistrefri.jpg" class="img-fluid" alt="">
+                <img src="img/reparacion-de-aires-acondicionados-en-madrid.jpg.webp" class="img-fluid" alt="">
 
                 <!-- <h3>Ut repellat blanditiis est dolore sunt dolorum quae.</h3>
                 <p>
