--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                 <img src="img/mujer-joven-tecnologia-casera.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Encendido de Aire Acondicionado</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
+                  <p class="texto-justificado"></p>
                   <a href="img/mujer-joven-tecnologia-casera.jpg<" title="Remodeling 2"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
@@ -639,7 +639,7 @@
                 <img src="img/persona-que-trabaja-edificacion-construccion.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Inspecciones Continuas</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
+                  <p class="texto-justificado"></p>
                   <a href="img/persona-que-trabaja-edificacion-construccion.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
@@ -680,7 +680,7 @@
                 <img src="img/sistrefri.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Construction 3</h4>
-                  <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
+                  <p class="texto-justificado"></p>
                   <a href="img/sistrefri.jpg" title="Construction 3"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
