--- a/index.html
+++ b/index.html
@@ -556,11 +556,11 @@
                 <img src="img/aire-acondicionado-decoracion-interior.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Aire acondicionado</h4>
-                  <a href="img/aire-acondicionado-decoracion-interior.jpg" title="Remodeling 1"
+                  <!-- <a href="img/aire-acondicionado-decoracion-interior.jpg"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -584,10 +584,10 @@
                 <img src="img/electrico.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Mantenimiento Preventivo y Correctivo</h4>
-                  <a href="img/electrico.jpg" title="Repairs 1" data-gallery="portfolio-gallery-repairs"
+                  <!-- <a href="img/electrico.jpg" title="Repairs 1" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -597,10 +597,10 @@
                 <img src="img/encendidoaire.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Venta de Sistemas Intelifentes de Aire Acondicionado</h4>
-                  <a href="img/encendidoaire.webp" title="Repairs 1" data-gallery="portfolio-gallery-book"
+                  <!-- <a href="img/encendidoaire.webp" title="Repairs 1" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -611,11 +611,11 @@
                 <div class="portfolio-info">
                   <h4>Encendido de Aire Acondicionado</h4>
                   <p class="texto-justificado"></p>
-                  <a href="img/mujer-joven-tecnologia-casera.jpg<" title="Remodeling 2"
+                  <!-- <a href="img/mujer-joven-tecnologia-casera.jpg<" title="Remodeling 2"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -625,11 +625,11 @@
                 <img src="img/ventilacion.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Ventilacion sobre restaurante</h4>
-                  <a href="img/ventilacion.jpg " title="Construction 2"
+                  <!-- <a href="img/ventilacion.jpg " title="Construction 2"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -640,10 +640,10 @@
                 <div class="portfolio-info">
                   <h4>Inspecciones Continuas</h4>
                   <p class="texto-justificado"></p>
-                  <a href="img/persona-que-trabaja-edificacion-construccion.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
+                  <!-- <a href="img/persona-que-trabaja-edificacion-construccion.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -653,10 +653,10 @@
                 <img src="img/personas-tiro-medio-casco-trabajo.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Mantenimiento Corrrectivo y Preventivo</h4>
-                  <a href="img/personas-tiro-medio-casco-trabajo.jpg" title="Repairs 2" data-gallery="portfolio-gallery-book"
+                  <!-- <a href="img/personas-tiro-medio-casco-trabajo.jpg" title="Repairs 2" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -666,11 +666,11 @@
                 <img src="img/sistema-refrigeracion-activa-aire.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sistema de Refrigeracion Industrial</h4>
-                  <a href="img/sistema-refrigeracion-activa-aire.png" title="Remodeling 3"
+                  <!-- <a href="img/sistema-refrigeracion-activa-aire.png" title="Remodeling 3"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -681,11 +681,11 @@
                 <div class="portfolio-info">
                   <h4>Construction 3</h4>
                   <p class="texto-justificado"></p>
-                  <a href="img/sistrefri.jpg" title="Construction 3"
+                  <!-- <a href="img/sistrefri.jpg" title="Construction 3"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -695,10 +695,10 @@
                 <img src="assets/img/projects/repairs-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Repairs 3</h4>
-                  <a href="assets/img/projects/repairs-3.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
+                  <!-- <a href="assets/img/projects/repairs-3.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
@@ -708,10 +708,10 @@
                 <img src="assets/img/projects/design-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Design 3</h4>
-                  <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
+                  <!-- <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
