--- a/index.html
+++ b/index.html
@@ -570,11 +570,11 @@
                 <img src="img/cerrar-bomba-calor-fuera-casa.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sistema de enfriamiento</h4>
-                  <a href="img/cerrar-bomba-calor-fuera-casa.jpg" title="Construction 1"
+                  <!-- <a href="img/cerrar-bomba-calor-fuera-casa.jpg" title="Construction 1"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div>
