--- a/about.html
+++ b/about.html
@@ -236,7 +236,66 @@
 
       </div>
     </section><!-- End Alt Services Section -->
+    <section id="get-started" class="get-started section-bg">
+      <div class="container">
 
+        <div class="justify-content-between gy-4">
+
+          <div class="col-lg-13 d-flex align-items-center" data-aos="fade-up">
+            <div class="content">
+              <h3>Beneficios de SIARSA</h3>
+              <p class="texto-justificado">Contamos con los mejores expertos en la materia para poder ofrecerte calidad en nuestro servicio.</p>
+              <br>
+              <ul>
+                <li class="texto-justificado">Los sistemas de airde acondicionado proporcionan un ambiente còmo en horagares, oficinas y comentarios, mejorar el bienestar de las personas aumentando la productividad laboral. </li>
+                <br>
+                <li class="texto-justificado">Las empresas especializadas pueden asesorar sobre equipos eficientes energéticamente, ayudando a los clientes a reducir sus facturas de energía.</li>
+                <br>
+                <li class="texto-justificado">En casos de situaciones de emergencia, como olas de calor extremas, estas empresas pueden proporcionar servicios urgentes para proteger la salud y seguridad de las personas.</li>
+              </ul>
+              <br>
+              <p class="texto-justificado">En resumen, una empresa dedicada a aires acondicionados y sistemas de refrigeración no solo brinda beneficios tangibles a los clientes en términos de confort y eficiencia, sino que también tiene un impacto positivo en la comunidad y en el medio ambiente a través de la promoción de tecnologías sostenibles y prácticas responsables.</p>
+            </div>
+          </div>
+
+          <!-- <div class="col-lg-5" data-aos="fade">
+            <form action="forms/quote.php" method="post" class="php-email-form">
+              <h3>Contactanos</h3>
+              <p class="texto-justificado">Nuestro equipo se contactara a la brevedad posible.</p>
+              <div class="row gy-3">
+
+                <div class="col-md-12">
+                  <input type="text" name="name" class="form-control" placeholder="Nombre" required>
+                </div>
+
+                <div class="col-md-12 ">
+                  <input type="email" class="form-control" name="email" placeholder="Email" required>
+                </div>
+
+                <div class="col-md-12">
+                  <input type="text" class="form-control" name="phone" placeholder="Telefono" required>
+                </div>
+
+                <div class="col-md-12">
+                  <textarea class="form-control" name="message" rows="6" placeholder="Mensaje" required></textarea>
+                </div>
+
+                <div class="col-md-12 text-center">
+                  <div class="loading">Cargando</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Tu solicitud ha sido enviada con exito, Gracias!</div>
+
+                  <button type="submit">Enviar</button>
+                </div>
+
+              </div>
+            </form>
+          </div> -->
+
+        </div>
+
+      </div>
+    </section>
     <!-- ======= Alt Services Section 2 ======= -->
     <!-- <section id="alt-services-2" class="alt-services section-bg">
       <div class="container" data-aos="fade-up">
